fix booksMockup on mobile

--- a/app/globals.css
+++ b/app/globals.css
@@ -79,7 +79,7 @@
 body {
   font-family: "Inter", sans-serif;
   color: var(--gray-700);
-  overflow-x: hidden;
+  overflow-x: hidden !important;
 }
 
 main {
